crates/language-v2/tests/src/fail/p2_specifiers/evm_target_redundant_from/test.stderr
error: 'From' with the first supported EVM target 'Frontier' is equivalent to 'Always', and can be removed.
  --> src/fail/p2_specifiers/evm_target_redundant_from/test.rs:25:83
   |
25 |             definitions = [BuiltInDefinition(name = MyBuiltIn, evm_enabled = From(Frontier))]
   |                                                                                   ^^^^^^^^
